2009-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Allow overrides from invoking environment.

2009-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: Now build with libbsdport.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore: New file.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c, test.c: More warnings removed.

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: confdefs.h should be rtems/confdefs.h

2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: Replace CONFIGURE_TEST_XXX with CONFIGURE_APPLICATION_XXX.

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* init.c: Increase number of file descriptors and use IMFS instead of
	mini-IMFS as filesystem.

2000-12-14	Eric Norum <eric.norum@usask.ca>

	* init.c, test.c: Added test of write capability.

2000-12-14	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.