@@ -1,3 +1,7 @@
+2010-06-29	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* init.c: Update for mount API changes.
+
 2009-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Allow overrides from invoking environment.
